[gd_scene load_steps=4 format=3 uid="uid://p1llqx1gte8k"]

[ext_resource type="Script" uid="uid://0dph6fwhv8vm" path="res://UI/Menus/SettingsMenu/settingsMenu.gd" id="1_aff3m"]
[ext_resource type="PackedScene" uid="uid://b4vrcsrd82rsv" path="res://UI/Resources/res_MenuBG.tscn" id="3_aff3m"]
[ext_resource type="PackedScene" uid="uid://bcwso72kxj1cj" path="res://UI/Resources/res_MenuButton.tscn" id="3_v2ysr"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_aff3m")

[node name="Anchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBG" parent="Anchor" instance=ExtResource("3_aff3m")]
layout_mode = 0

[node name="Buttons" type="HBoxContainer" parent="Anchor"]
layout_mode = 0
offset_left = -572.0
offset_top = -319.0
offset_right = 388.0
offset_bottom = -277.0

[node name="GameplayButton" parent="Anchor/Buttons" instance=ExtResource("3_v2ysr")]
layout_mode = 2
text = "Gameplay"

[node name="VideoButton" parent="Anchor/Buttons" instance=ExtResource("3_v2ysr")]
layout_mode = 2
text = "Video"

[node name="AudioButton" parent="Anchor/Buttons" instance=ExtResource("3_v2ysr")]
layout_mode = 2
text = "Audio"

[node name="ControlsButton" parent="Anchor/Buttons" instance=ExtResource("3_v2ysr")]
layout_mode = 2
text = "Controls"

[node name="MenuArea" type="Control" parent="Anchor"]
anchors_preset = 0
offset_left = -576.0
offset_top = -268.0
offset_right = 576.0
offset_bottom = 324.0

[connection signal="pressed" from="Anchor/Buttons/GameplayButton" to="." method="_on_gameplay_button_pressed"]
[connection signal="pressed" from="Anchor/Buttons/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="Anchor/Buttons/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="Anchor/Buttons/ControlsButton" to="." method="_on_controls_button_pressed"]
