extends MainMenuRoot

@onready var menuArea = $Anchor/MenuArea

func _on_gameplay_button_pressed() -> void:
	#Gameplay Settings -> Open window in the MenuArea
	pass

func _on_video_button_pressed() -> void:
	pass

func _on_audio_button_pressed() -> void:
	pass

func _on_controls_button_pressed() -> void:
	pass
